--- a/release-notes/4.7.18.md
+++ b/release-notes/4.7.18.md
@@ -1,6 +1,6 @@
 # CiviCRM 4.7.18
 
-Released FIX DATE
+Released April 5, 2017
 
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
@@ -10,85 +10,149 @@ Released FIX DATE
 
 ### Core CiviCRM
 
-- **[CRM-19385](https://issues.civicrm.org/jira/browse/CRM-19385) Look at REMOVING id column from cache tables ([10073](https://github.com/civicrm/civicrm-core/pull/10073) and [10019](https://github.com/civicrm/civicrm-core/pull/10019))**
+- **[CRM-19385](https://issues.civicrm.org/jira/browse/CRM-19385) Look at
+  REMOVING id column from cache tables
+  ([10073](https://github.com/civicrm/civicrm-core/pull/10073) and
+  [10019](https://github.com/civicrm/civicrm-core/pull/10019))**
 
-- **[CRM-20302](https://issues.civicrm.org/jira/browse/CRM-20302) Case api improvements ([10017](https://github.com/civicrm/civicrm-core/pull/10017))**
+  Cache tables no longer use auto-incremented ID fields.
 
-- **[CRM-20286](https://issues.civicrm.org/jira/browse/CRM-20286) Add card type field on search form ([9999](https://github.com/civicrm/civicrm-core/pull/9999))**
+- **[CRM-20062](https://issues.civicrm.org/jira/browse/CRM-20062) New counties
+  of Kenya ([9937](https://github.com/civicrm/civicrm-core/pull/9937))**
 
-- **[CRM-20282](https://issues.civicrm.org/jira/browse/CRM-20282) Add credit card type field for Bookkeeping report ([9995](https://github.com/civicrm/civicrm-core/pull/9995))**
+  Kenya is now divided into 47 counties, treated as "state/province" in CiviCRM.
 
-- **[CRM-19674](https://issues.civicrm.org/jira/browse/CRM-19674) Add ability to see at a glance if a contribution is part of a recurring series ([9421](https://github.com/civicrm/civicrm-core/pull/9421))**
+- **[CRM-20187](https://issues.civicrm.org/jira/browse/CRM-20187) allow class
+  parameter for hook_civicrm_links()  
+  ([9901](https://github.com/civicrm/civicrm-core/pull/9901))**
 
-- **[CRM-19710](https://issues.civicrm.org/jira/browse/CRM-19710) Preserve is_email_receipt parameter through to email sent ([10000](https://github.com/civicrm/civicrm-core/pull/10000))**
+  Links provided to `hook_civicrm_links()` can now specify classes for the `<a>`
+  element.
 
-- **[CRM-20272](https://issues.civicrm.org/jira/browse/CRM-20272) Add credit card type field for Contribution Summary Report ([9986](https://github.com/civicrm/civicrm-core/pull/9986))**
+- **[CRM-20039](https://issues.civicrm.org/jira/browse/CRM-20039) Add
+  supplemental address lines as criteria in Advanced Search
+  ([9850](https://github.com/civicrm/civicrm-core/pull/9850))**
 
-- **[CRM-19715](https://issues.civicrm.org/jira/browse/CRM-19715) Remove Close Accounting Period code ([9983](https://github.com/civicrm/civicrm-core/pull/9983) and [9955](https://github.com/civicrm/civicrm-core/pull/9955))**
+  Searching by supplemental address 1 and 2 (though not 3) is available in the
+  Advanced Search.
 
-- **[CRM-20239](https://issues.civicrm.org/jira/browse/CRM-20239) Extra tests for the CRM_Contact_BAO_Individual::format function ([9963](https://github.com/civicrm/civicrm-core/pull/9963))**
+- **[CRM-20219](https://issues.civicrm.org/jira/browse/CRM-20219) Switch
+  activity date time to use datepicker in profiles
+  ([9935](https://github.com/civicrm/civicrm-core/pull/9935))**
 
-- **[CRM-20058](https://issues.civicrm.org/jira/browse/CRM-20058) Add Credit Card Payment link for partially paid contribution ([9860](https://github.com/civicrm/civicrm-core/pull/9860) and [9941](https://github.com/civicrm/civicrm-core/pull/9941))**
-
-- **[CRM-20157](https://issues.civicrm.org/jira/browse/CRM-20157) Code cleanup - remove unused & unuseful variables in dedupe classes ([9907](https://github.com/civicrm/civicrm-core/pull/9907))**
-
-- **[CRM-20062](https://issues.civicrm.org/jira/browse/CRM-20062) New counties of Kenya ([9937](https://github.com/civicrm/civicrm-core/pull/9937))**
-
-- **[CRM-20224](https://issues.civicrm.org/jira/browse/CRM-20224) Cleanup internal event names ([9943](https://github.com/civicrm/civicrm-core/pull/9943))**
-
-- **[CRM-19773](https://issues.civicrm.org/jira/browse/CRM-19773) Call hook_civicrm_selectWhereClause from the BAOs ([9923](https://github.com/civicrm/civicrm-core/pull/9923) and [9570](https://github.com/civicrm/civicrm-core/pull/9570))**
-
-- **[CRM-19124](https://issues.civicrm.org/jira/browse/CRM-19124) Date of birth format varies between hooks and API ([9847](https://github.com/civicrm/civicrm-core/pull/9847))**
-
-- **[CRM-20187](https://issues.civicrm.org/jira/browse/CRM-20187) allow class parameter for hook_civicrm_links()  ([9901](https://github.com/civicrm/civicrm-core/pull/9901))**
+  The activity date/time field now uses the more standard datepicker rather than
+  the jCalendar widget when used in a profile.
 
 ### CiviContribute
 
-- **[CRM-19900](https://issues.civicrm.org/jira/browse/CRM-19900) Enable/Disable payment processor from summary page only disables live ([9979](https://github.com/civicrm/civicrm-core/pull/9979))**
+- **[CRM-20286](https://issues.civicrm.org/jira/browse/CRM-20286) Add card type
+  field on search form
+  ([9999](https://github.com/civicrm/civicrm-core/pull/9999))**
 
-- **[CRM-20220](https://issues.civicrm.org/jira/browse/CRM-20220) Use text box for signature field on payment processor page ([9936](https://github.com/civicrm/civicrm-core/pull/9936))**
+  The Find Contributions and Advanced Search now allow searching by card type.
 
-- **[CRM-20146](https://issues.civicrm.org/jira/browse/CRM-20146) check_number toggle: don't hardcode value ([9865](https://github.com/civicrm/civicrm-core/pull/9865))**
+- **[CRM-20282](https://issues.civicrm.org/jira/browse/CRM-20282) Add credit
+  card type field for Bookkeeping report
+  ([9995](https://github.com/civicrm/civicrm-core/pull/9995))**
 
-- **[CRM-20199](https://issues.civicrm.org/jira/browse/CRM-20199) Contribution searches all include an unindexed join ([9631](https://github.com/civicrm/civicrm-core/pull/9631))**
+  The bookkeeping report now allows for displaying and filtering by card type.
 
-- **[CRM-20052](https://issues.civicrm.org/jira/browse/CRM-20052) BillingBlock js not loading as expected in Drupal 8 ([9859](https://github.com/civicrm/civicrm-core/pull/9859))**
+- **[CRM-19674](https://issues.civicrm.org/jira/browse/CRM-19674) Add ability to
+  see at a glance if a contribution is part of a recurring series
+  ([9421](https://github.com/civicrm/civicrm-core/pull/9421))**
+
+  The display of recurring contributions in contribution search results is
+  shorter.
+
+- **[CRM-20272](https://issues.civicrm.org/jira/browse/CRM-20272) Add credit
+  card type field for Contribution Summary Report
+  ([9986](https://github.com/civicrm/civicrm-core/pull/9986))**
+
+  The contribution summary report now allows for displaying and filtering by
+  card type.
+
+- **[CRM-19715](https://issues.civicrm.org/jira/browse/CRM-19715) Remove Close
+  Accounting Period code
+  ([9983](https://github.com/civicrm/civicrm-core/pull/9983) and
+  [9955](https://github.com/civicrm/civicrm-core/pull/9955))**
+
+  The Close Accounting Period interface is removed.
+
+- **[CRM-20058](https://issues.civicrm.org/jira/browse/CRM-20058) Add Credit
+  Card Payment link for partially paid contribution
+  ([9860](https://github.com/civicrm/civicrm-core/pull/9860) and
+  [9941](https://github.com/civicrm/civicrm-core/pull/9941))**
+
+  There is now a separate link for the credit card payment form for partially
+  paid contributions.
+
+- **[CRM-20199](https://issues.civicrm.org/jira/browse/CRM-20199) Contribution
+  searches all include an unindexed join
+  ([9631](https://github.com/civicrm/civicrm-core/pull/9631))**
+
+  The option value table is joined on contribution searches when option values
+  could be provided through pseudoconstants, with improved performance.
+
+- **[CRM-16189](https://issues.civicrm.org/jira/browse/CRM-16189) Improve
+  support for Accrual Method bookkeeping
+  ([8807](https://github.com/civicrm/civicrm-core/pull/8807)) (partial work)**
+
+  The deferred revenue report now operates more like other reports.
 
 ### CiviCase
 
-- **[CRM-20102](https://issues.civicrm.org/jira/browse/CRM-20102) Case table view ([9940](https://github.com/civicrm/civicrm-core/pull/9940))**
+- **[CRM-20302](https://issues.civicrm.org/jira/browse/CRM-20302) Case api
+  improvements ([10017](https://github.com/civicrm/civicrm-core/pull/10017))**
+
+  The Case API now allows for filtering by and returning cases with tags.
+
+- **[CRM-20102](https://issues.civicrm.org/jira/browse/CRM-20102) Case table
+  view ([9940](https://github.com/civicrm/civicrm-core/pull/9940))**
+
+  A variety of improvements to case and activity results in the API.
 
 ### CiviReport
 
-- **[CRM-20255](https://issues.civicrm.org/jira/browse/CRM-20255) Add developer tabs to more reports ([9978](https://github.com/civicrm/civicrm-core/pull/9978))**
+- **[CRM-20255](https://issues.civicrm.org/jira/browse/CRM-20255) Add developer
+  tabs to more reports
+  ([9978](https://github.com/civicrm/civicrm-core/pull/9978))**
 
-### CiviContribute, CiviMember
-
-- **[CRM-19792](https://issues.civicrm.org/jira/browse/CRM-19792) Authorize.net membership renewals with credit card not processed though event regs are ([9662](https://github.com/civicrm/civicrm-core/pull/9662))**
-
-### Accounting Integration, CiviContribute, Core CiviCRM
-
-- **[CRM-16189](https://issues.civicrm.org/jira/browse/CRM-16189) Improve support for Accrual Method bookkeeping ([8807](https://github.com/civicrm/civicrm-core/pull/8807))**
-
-### CiviCRM Search
-
-- **[CRM-20039](https://issues.civicrm.org/jira/browse/CRM-20039) Add supplemental address lines as criteria in Advanced Search ([9850](https://github.com/civicrm/civicrm-core/pull/9850))**
-
-### CiviCRM Profile
-
-- **[CRM-20219](https://issues.civicrm.org/jira/browse/CRM-20219) Switch activity date time to use datepicker in profiles ([9935](https://github.com/civicrm/civicrm-core/pull/9935))**
+  The repeating contribution and event income reports now have the developer tab.
 
 ### Drupal Integration Modules
 
-- **[CRM-20186](https://issues.civicrm.org/jira/browse/CRM-20186) Expose legal name in views ([430](https://github.com/civicrm/civicrm-drupal/pull/430) and [429](https://github.com/civicrm/civicrm-drupal/pull/429))**
+- **[CRM-20186](https://issues.civicrm.org/jira/browse/CRM-20186) Expose legal
+  name in views ([430](https://github.com/civicrm/civicrm-drupal/pull/430) and
+  [429](https://github.com/civicrm/civicrm-drupal/pull/429))**
+
+  The Legal Name field is now available in Drupal Views.
 
 ### WordPress Integration
 
-- **[CRM-20225](https://issues.civicrm.org/jira/browse/CRM-20225) Add classes to WordPress basepage ([111](https://github.com/civicrm/civicrm-wordpress/pull/111))**
+- **[CRM-20225](https://issues.civicrm.org/jira/browse/CRM-20225) Add classes to
+  WordPress basepage
+  ([111](https://github.com/civicrm/civicrm-wordpress/pull/111))**
+
+  When viewing a CiviCRM page using the basepage method, the `<body>` element is
+  given a class name corresponding to the CiviCRM page.
 
 ## <a name="bugs"></a>Bugs resolved
 
 ### Core CiviCRM
+
+- **[CRM-19773](https://issues.civicrm.org/jira/browse/CRM-19773) Call
+  hook_civicrm_selectWhereClause from the BAOs
+  ([9923](https://github.com/civicrm/civicrm-core/pull/9923) and
+  [9570](https://github.com/civicrm/civicrm-core/pull/9570)) (preliminary work)**
+
+  Reports now check permissions more consistently for viewing entities.
+
+- **[CRM-19124](https://issues.civicrm.org/jira/browse/CRM-19124) Date of birth
+  format varies between hooks and API
+  ([9847](https://github.com/civicrm/civicrm-core/pull/9847))**
+
+  The birth date field is now *mostly* in the format `yyyymmddhhmmss` when it
+  appears in hooks.
 
 - **[CRM-20347](https://issues.civicrm.org/jira/browse/CRM-20347) Fatal error on delete participant record with related contribution ([10061](https://github.com/civicrm/civicrm-core/pull/10061))**
 
@@ -178,6 +242,32 @@ Released FIX DATE
 
 ### CiviContribute
 
+- **[CRM-19710](https://issues.civicrm.org/jira/browse/CRM-19710) Preserve
+  is_email_receipt parameter through to email sent
+  ([10000](https://github.com/civicrm/civicrm-core/pull/10000))**
+
+  In some cases, the `is_email_receipt` API parameter would fail to trigger a
+  receipt getting sent.
+
+- **[CRM-19900](https://issues.civicrm.org/jira/browse/CRM-19900) Enable/Disable
+  payment processor from summary page only disables live
+  ([9979](https://github.com/civicrm/civicrm-core/pull/9979))**
+
+- **[CRM-20220](https://issues.civicrm.org/jira/browse/CRM-20220) Use text box
+  for signature field on payment processor page
+  ([9936](https://github.com/civicrm/civicrm-core/pull/9936))**
+
+- **[CRM-20146](https://issues.civicrm.org/jira/browse/CRM-20146) check_number
+  toggle: don't hardcode value
+  ([9865](https://github.com/civicrm/civicrm-core/pull/9865))**
+
+  The value of the "check" payment instrument was hard-coded for the purpose of
+  showing and hiding the check number field.
+
+- **[CRM-20052](https://issues.civicrm.org/jira/browse/CRM-20052) BillingBlock
+  js not loading as expected in Drupal 8
+  ([9859](https://github.com/civicrm/civicrm-core/pull/9859))**
+
 - **[CRM-20251](https://issues.civicrm.org/jira/browse/CRM-20251) Make it easier to overwrite front end form help text regarding recurring ([9970](https://github.com/civicrm/civicrm-core/pull/9970))**
 
 - **[CRM-20252](https://issues.civicrm.org/jira/browse/CRM-20252) Improve text when processing possibly-delayed-payments ([9971](https://github.com/civicrm/civicrm-core/pull/9971))**
@@ -201,6 +291,15 @@ Released FIX DATE
 - **[CRM-20001](https://issues.civicrm.org/jira/browse/CRM-20001) Tokens in Subject not working ([9824](https://github.com/civicrm/civicrm-core/pull/9824))**
 
 - **[CRM-20206](https://issues.civicrm.org/jira/browse/CRM-20206) & encoded to &amp; in plain text email checksum links ([9938](https://github.com/civicrm/civicrm-core/pull/9938) and [9917](https://github.com/civicrm/civicrm-core/pull/9917))**
+
+### CiviMember
+
+- **[CRM-19792](https://issues.civicrm.org/jira/browse/CRM-19792) Authorize.net
+  membership renewals with credit card not processed though event regs are
+  ([9662](https://github.com/civicrm/civicrm-core/pull/9662))**
+
+  Renewing a membership would not always provide the email address to the
+  payment processor.
 
 ### CiviCRM Profile
 
@@ -237,6 +336,20 @@ Released FIX DATE
 ### WordPress Integration
 
 - **[CRM-19665](https://issues.civicrm.org/jira/browse/CRM-19665) Canonical URL for WP basepage pages is the basepage itself ([107](https://github.com/civicrm/civicrm-wordpress/pull/107), [2](https://github.com/civicrm/civicrm-wordpress/pull/2), and [1](https://github.com/civicrm/civicrm-wordpress/pull/1))**
+
+## <a name="misc"></a>Miscellany
+
+- **[CRM-20239](https://issues.civicrm.org/jira/browse/CRM-20239) Extra tests
+  for the CRM_Contact_BAO_Individual::format function
+  ([9963](https://github.com/civicrm/civicrm-core/pull/9963))**
+
+- **[CRM-20157](https://issues.civicrm.org/jira/browse/CRM-20157) Code cleanup -
+  remove unused & unuseful variables in dedupe classes
+  ([9907](https://github.com/civicrm/civicrm-core/pull/9907))**
+
+- **[CRM-20224](https://issues.civicrm.org/jira/browse/CRM-20224) Cleanup
+  internal event names
+  ([9943](https://github.com/civicrm/civicrm-core/pull/9943))**
 
 ## <a name="credits"></a>Credits
 
