--- a/release-notes/4.7.18.md
+++ b/release-notes/4.7.18.md
@@ -4,6 +4,7 @@ Released April 5, 2017
 
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
+- **[Miscellany](#misc)**
 - **[Credits](#credits)**
 
 ## <a name="features"></a>Features
@@ -543,9 +544,27 @@ Released April 5, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Australian Greens - Seamus Lee; Christian Wach; CiviCRM - Coleman Watts, Donald Lobo, Jitendra Purohit, Kurund Jalmi, Tim Otten; CiviDesk - Sunil Pawar; davidjosephhayes; ergonlogic; Erich Schulz; fliespl; Fuzion - Chris Burgess, Eileen McNaughton; jeromelebleu; JMA Consulting - Edsel Lopez, Joe Murray, Pradeep Nayak; Johan Vervloet; John Kingsnorth; Klaas Eikelboom; Lighthouse Design and Consulting - Brian Shaughnessy; Matthew Wire; mickadoo; Progressive Technology Project - Jamie McClelland; rthouvenin; Sean Madsen; Semper IT - Karin Gerritsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; VasanthaKaje; vikaskumar14786; We Move Europe/Caltha - Tomasz Pietrzkowski; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Arkadiusz
+Rzadkowolski; Australian Greens - Seamus Lee; Black Brick Software - David
+Hayes; Christian Wach; CiviCRM - Coleman Watts, Donald Lobo, Jitendra Purohit,
+Kurund Jalmi, Tim Otten; CiviDesk - Sunil Pawar; CompuCorp - Michael Devery;
+Ergon Logic Enterprises - Christopher Gervais; Erich Schulz; Fuzion - Chris
+Burgess, Eileen McNaughton; Jérôme Lebleu; JMA Consulting - Edsel Lopez, Joe
+Murray, Pradeep Nayak; Johan Vervloet; John Kingsnorth; Klaas Eikelboom;
+Lighthouse Design and Consulting - Brian Shaughnessy; Matthew Wire; Progressive
+Technology Project - Jamie McClelland; Romain Thouvenin; Sean Madsen; Semper IT -
+Karin Gerritsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective -
+Kevin Cristiano; Vasantha Kaje; Vikas Kumar; We Move Europe/Caltha - Tomasz
+Pietrzkowski; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist Association - Andrew West; Christian Wach; Circle Interactive - Dave Jenkins; CiviCoop - Jaap Jansma; civicrm-builder; CiviCRM - Coleman Watts, Jitendra Purohit, Monish Deb, Tim Otten, Yashodha Chaku; CiviDesk - Nicolas Ganivet, Sunil Pawar; CompuCorp - Guanhuan Chen; Dahndy; davidjosephhayes; ergonlogic; Erich Schulz; Fernando; flies; fliespl; Forest CRM Consulting - Tamar Meir; Fuzion - Chris Burgess, Eileen McNaughton, Peter Davis; hershel; jboeke; jlebleu; JMA Consulting - Edsel Lopez, Joe Murray, Jon Goldberg, Pradeep Nayak; johanv; John Kingsnorth; Klaas Eikelboom; Korlon - Stuart Gaston; kurund; Lighthouse Design and Consulting - Brian Shaughnessy; marshCircle; mattwire; membership; michael; mirela; onlyjob; pnowak; Progressive Technology Project - Jamie McClelland; romain; saparker; scardinius; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; VasanthaKaje; Wikimedia Foundation - Eileen McNaughton
+Amnistía Internacional España - Fernando Rodríguez; Avietech - Jonathan Boeke;
+Blackfly Solutions - Alan Dixon; British Humanist Association - Andrew West;
+Circle Interactive - Dave Jenkins, Martin Castle; CiviCoop - Jaap Jansma;
+CiviCRM - Monish Deb, Yashodha Chaku; CiviDesk - Nicolas Ganivet; CiviHosting -
+Hershel Robinson; CompuCorp - Guanhuan Chen, Mirela Stanila; Dmitry Smirnov;
+Forest CRM Consulting - Tamar Meir; Fuzion - Peter Davis; JMA Consulting - Jon
+Goldberg; Korlon - Stuart Gaston; Minnesota Association of Veterinary
+Technicians - Maureen Parks; Pawel Nowak; Skvare - Mark Hanna; Stuart Parker
