--- a/release-notes/4.7.19.md
+++ b/release-notes/4.7.19.md
@@ -1,9 +1,10 @@
 # CiviCRM 4.7.19
 
-Released FIX DATE
+Released May 3, 2017
 
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
+- **[Miscellany](#misc)**
 - **[Credits](#credits)**
 
 ## <a name="features"></a>Features
@@ -315,6 +316,8 @@ Released FIX DATE
 ### WordPress Integration
 
 - **[CRM-20148](https://issues.civicrm.org/jira/browse/CRM-20148) WP-CLI installer won't run if it can be run ([110](https://github.com/civicrm/civicrm-wordpress/pull/110))**
+
+## <a name="misc"></a>Miscellany
 
 ## <a name="credits"></a>Credits
 
