--- a/release-notes/4.7.19.md
+++ b/release-notes/4.7.19.md
@@ -767,9 +767,32 @@ Released May 3, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Australian Greens - Seamus Lee; CiviCoop - Jaap Jansma; CiviCRM - Coleman Watts, Tim Otten; CiviFirst - John Kirk; CompuCorp - Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; Erich Schulz; ErikHommel; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; Ginkgo Street Labs - Tobias Lounsbury; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; Joinery - Allen Shaw; Lighthouse Design and Consulting - Brian Shaughnessy; MJW Consulting - Matthew Wire; Progressive Technology Project - Jamie McClelland; Romain Thouvenin; sdragnev; Semper IT - Karin Gerritsen; Squiffle Consulting - Aidan Saunders; Systopia - Björn Endres; Third Sector Design - Michael McAndrew; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Australian Greens -
+Seamus Lee; CiviCoop - Erik Hommel, Jaap Jansma; CiviCRM - Coleman Watts, Tim
+Otten; CiviFirst - John Kirk; CompuCorp - Omar Abu Hussein; Coop SymbioTIC -
+Mathieu Lutfy; Erich Schulz; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra
+Purohit; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak;
+Joinery - Allen Shaw; Lighthouse Design and Consulting - Brian Shaughnessy; MJW
+Consulting - Matthew Wire; Progressive Technology Project - Jamie McClelland;
+Romain Thouvenin; Semper IT - Karin Gerritsen; Squiffle Consulting - Aidan
+Saunders; Stan Dragnev; Systopia - Björn Endres; Third Sector Design - Michael
+McAndrew; Tobias Lounsbury; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; anthonylindsay; Australian Greens - Seamus Lee; b.systopia; Barbara Miller; Blackfly Solutions - Alan Dixon; British Humanist Association - William Gordon; Christian Wach; Circle Interactive - Dave Jenkins, Martin Castle; CiviCoop - Jaap Jansma; civicrm-builder; CiviCRM - Coleman Watts, Donald Lobo, Josh Gowans, Tim Otten; CiviDesk - Nicolas Ganivet, Steve Kessler, Sunil Pawar, Yashodha Chaku; CiviFirst - John Kirk; CompuCorp - Guanhuan Chen, Mirela Stanila, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; dotsam; ErikHommel; erikhommel; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; gemma.potaka; gharris; Ginkgo Street Labs - Frank Gómez; Glick Software - David Glick; GMCVO Databases - Jon-man Cheung; guyiac; Hartmann Computer Consulting - Peter Hartmann; herb@freeform; JMA Consulting - Edsel Lopez, Joe Murray, Jon Goldberg, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; Korlon - Stuart Gaston; Lighthouse Design and Consulting - Brian Shaughnessy; Marc Brazeau; MC3 - Graham Mitchell; mikaweinstein; MJW Consulting - Matthew Wire; mover; princessang417; Progressive Technology Project - Jamie McClelland; quicksketch; Richard van Oosterhout; Romain Thouvenin; saburkett; Sean Madsen; Semper IT - Karin Gerritsen; Spry Digital - Ellen Hendricks; Squiffle Consulting - Aidan Saunders; stan_d; Systopia - Björn Endres; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; tunbolawande@gmail.com; Wikimedia Foundation - Eileen McNaughton; ñull
+AGH Strategies - Mika Weinstein; Annertech - Anthony Lindsay; Barbara Miller;
+Blackfly Solutions - Alan Dixon; British Humanist Association - William Gordon;
+Canine Companions for Independence - Angela Cacciola; Christian Wach; Circle
+Interactive - Dave Jenkins, Martin Castle; CiviCRM - Josh Gowans; CiviDesk -
+Nicolas Ganivet, Steve Kessler, Sunil Pawar, Yashodha Chaku; Comunica2 - René
+Nieuwburg; CompuCorp - Guanhuan Chen, Mirela Stanila; Coop SymbioTIC - Mathieu
+Lutfy; Donald Lobo; Freeform Solutions - Herb van den Dool; Fuzion - Gemma
+Potaka, Peter Davis; Ginkgo Street Labs - Frank Gómez; Glick Software - David
+Glick; GMCVO Databases - Jon-man Cheung; Greenleaf Advancement - Guy Iaccarino;
+Hartmann Computer Consulting - Peter Hartmann; JMA Consulting - Jon Goldberg;
+John Kingsnorth; Korlon - Stuart Gaston; Lullabot - Nate Lampton; Marc Brazeau;
+MC3 - Graham Mitchell; Michal Mach; Richard van Oosterhout; Romain Thouvenin;
+Samuel Haskell; Sean Madsen; Semper IT - Karin Gerritsen; Spry Digital - Ellen
+Hendricks, Sheila Burkett; Tadpole Collective - Kevin Cristiano; Team Expansion -
+Greg Harris; Timbsoft Technologies - Tunbola Ogunwande
