--- a/release-notes/4.7.19.md
+++ b/release-notes/4.7.19.md
@@ -133,7 +133,7 @@ Released May 3, 2017
      email address of the logged-in user will be used.  This was the prior
      behavior.
 
-  **[CRM-19464](https://issues.civicrm.org/jira/browse/CRM-19464)
+- **[CRM-19464](https://issues.civicrm.org/jira/browse/CRM-19464)
   supplemental_address_3 only exists in API
   ([10166](https://github.com/civicrm/civicrm-core/pull/10166) and
   [9857](https://github.com/civicrm/civicrm-core/pull/9857))**
