--- a/release-notes/4.7.20.md
+++ b/release-notes/4.7.20.md
@@ -1,9 +1,10 @@
 # CiviCRM 4.7.20
 
-Released FIX DATE
+Released June 7, 2017
 
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
+- **[Miscellany](#misc)**
 - **[Credits](#credits)**
 
 ## <a name="features"></a>Features
@@ -249,6 +250,9 @@ Released FIX DATE
 ### CiviContribute, CiviEvent
 
 - **[CRM-20396](https://issues.civicrm.org/jira/browse/CRM-20396) Event participation payments not correctly recorded in financial_trxn table (frontend) ([10124](https://github.com/civicrm/civicrm-core/pull/10124))**
+
+## <a name="misc"></a>Miscellany
+
 
 ## <a name="credits"></a>Credits
 
