--- a/release-notes/4.7.20.md
+++ b/release-notes/4.7.20.md
@@ -10,6 +10,8 @@ Released FIX DATE
 
 ### Core CiviCRM
 
+- **[CRM-20591](https://issues.civicrm.org/jira/browse/CRM-20591) Disabling a payment processor via UI (other than Payment_PayPalImpl) will break live mode ([10402](https://github.com/civicrm/civicrm-core/pull/10402))**
+
 - **[CRM-20576](https://issues.civicrm.org/jira/browse/CRM-20576) Increase length of civicrm_batch.title ([10359](https://github.com/civicrm/civicrm-core/pull/10359))**
 
 - **[CRM-20238](https://issues.civicrm.org/jira/browse/CRM-20238) Hook for inbound SMS messages ([10353](https://github.com/civicrm/civicrm-core/pull/10353))**
@@ -88,7 +90,15 @@ Released FIX DATE
 
 ## <a name="bugs"></a>Bugs resolved
 
+### CiviEvent
+
+- **[CRM-20604](https://issues.civicrm.org/jira/browse/CRM-20604) Registering additional event participants causes fatal error ([10468](https://github.com/civicrm/civicrm-core/pull/10468))**
+
+- **[CRM-20581](https://issues.civicrm.org/jira/browse/CRM-20581) Civi event users do not have access to StateProvince entity via the API ([10459](https://github.com/civicrm/civicrm-core/pull/10459))**
+
 ### Core CiviCRM
+
+- **[CRM-20662](https://issues.civicrm.org/jira/browse/CRM-20662) SMS Domain ID upgrade step breaks on multisite ([10444](https://github.com/civicrm/civicrm-core/pull/10444))**
 
 - **[CRM-20564](https://issues.civicrm.org/jira/browse/CRM-20564) custom date fields in on-behalf-of forms broken ([10372](https://github.com/civicrm/civicrm-core/pull/10372))**
 
@@ -170,6 +180,10 @@ Released FIX DATE
 
 - **typo in error message ([181](https://github.com/civicrm/civicrm-packages/pull/181))**
 
+### Core CiviCRM, Internationalisation
+
+- **[CRM-20623](https://issues.civicrm.org/jira/browse/CRM-20623) Add Column function in Upgrade Base does not properly rebuild multilingual views ([10399](https://github.com/civicrm/civicrm-core/pull/10399))**
+
 ### Dedupe
 
 - **[CRM-19643](https://issues.civicrm.org/jira/browse/CRM-19643) Remove unused ref to  ([10272](https://github.com/civicrm/civicrm-core/pull/10272))**
@@ -240,9 +254,9 @@ Released FIX DATE
 
 This release was developed by the following code authors:
 
-AGH Strategies - Andrew Hunt; arthuralmeidap; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CiviFirst - John Kirk; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; highfalutin; JMA Consulting - Jon Goldberg, Monish Deb, Pradeep Nayak; Joinery - Allen Shaw; kngs; kryptothesuperdog; Lighthouse Design and Consulting - Brian Shaughnessy; mhurwicz; Progressive Technology Project - Jamie McClelland; Saurabh Batra; Sean Madsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; arthuralmeidap; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CiviFirst - John Kirk; Coop SymbioTIC - Mathieu Lutfy; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; Greenleaf Advancement - Karen Stevenson; JMA Consulting - Jon Goldberg, Monish Deb, Pradeep Nayak; Joinery - Allen Shaw; kryptothesuperdog; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; mhurwicz; Progressive Technology Project - Jamie McClelland; Saurabh Batra; Sean Madsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Andrew Cormick-Dockery; arborrow; arthuralmeidap; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist Association - Andrew West; brucew2013; cath; Circle Interactive - Dave Jenkins; CiviCoop - Erik Hommel; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CompuCorp - Guanhuan Chen; Dave Greenberg; devmate; dschafer; effy; Ergon Logic Enterprises - Christopher Gervais; esantanche; fen; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Ginkgo Street Labs - Frank Gómez; ineffyble; jchester; JMA Consulting - Edsel Lopez, Joe Murray, Jon Goldberg, Monish Deb, Pradeep Nayak; joannechester; johanv; Johan Vervloet; johnff; John Kingsnorth; Joinery - Allen Shaw; kngs; Korlon - Stuart Gaston; kreynen; krypto; Lighthouse Design and Consulting - Brian Shaughnessy; loganbear; Marc Brazeau; Mathieu; MC3 - Graham Mitchell; mfb; MJW Consulting - Matthew Wire; nathan_b; nielo; nocabt; Progressive Technology Project - Jamie McClelland; Richard van Oosterhout; robbrandt; samuelsov; saurabh.batra; Saurabh Batra; Sean Madsen; Semper IT - Karin Gerritsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Web Access - Kurund Jalmi; website@dght.uk; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Agileware - Agileware Team; Andrew Cormick-Dockery; arborrow; arthuralmeidap; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist Association - Andrew West; brucew2013; cath; Circle Interactive - Dave Jenkins; CiviCoop - Erik Hommel; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CompuCorp - Guanhuan Chen; cwells; Dave Greenberg; devmate; dschafer; effy; Ergon Logic Enterprises - Christopher Gervais; esantanche; fen; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Ginkgo Street Labs - Frank Gómez; Greenleaf Advancement - Karen Stevenson; ineffyble; jchester; JMA Consulting - Edsel Lopez, Joe Murray, Jon Goldberg, Monish Deb, Pradeep Nayak; joannechester; johanv; Johan Vervloet; johnff; John Kingsnorth; Joinery - Allen Shaw; Korlon - Stuart Gaston; kreynen; krypto; Leanwebstart; Lighthouse Design and Consulting - Brian Shaughnessy; loganbear; Marc Brazeau; Mathieu; MC3 - Graham Mitchell; mfb; MJW Consulting - Matthew Wire; nathan_b; nielo; nocabt; pcorbett; Progressive Technology Project - Jamie McClelland; rares; Richard van Oosterhout; robbrandt; samuelsov; saurabh.batra; Saurabh Batra; Sean Madsen; Semper IT - Karin Gerritsen; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; thirdsun; tom.m; Web Access - Kurund Jalmi; website@dght.uk; Wikimedia Foundation - Eileen McNaughton
