--- a/release-notes/4.7.20.md
+++ b/release-notes/4.7.20.md
@@ -624,5 +624,7 @@ Fuzion - Peter Davis; JMA Consulting - Edsel Lopez, Joe Murray; Joanne Chester;
 Johan Vervloet; John Kingsnorth; Kevin Reynen; Kompetenzzentrum
 Technik-Diversity-Chancengleichheit - Niels Heinemann; Korlon - Stuart Gaston;
 Marc Brazeau; Mathieu; MC3 - Graham Mitchell; MJW Consulting - Matthew Wire;
-Nathan Brettell; Rareș Pamfil; Redfin Solutions - Chris Wells, Patrick Corbett; Registered Nurses' Association of Ontario - Thomas Mannell; Richard van Oosterhout; Semper IT - Karin Gerritsen; Serge Lachapelle; Third
-Sector Design - Michael McAndrew; Third Sun - Troy Mumm; Thomas Bacon; Web Access - Kurund Jalmi
+Nathan Brettell; Rareș Pamfil; Redfin Solutions - Chris Wells, Patrick Corbett;
+Registered Nurses' Association of Ontario - Thomas Mannell; Richard van
+Oosterhout; Semper IT - Karin Gerritsen; Serge Lachapelle; Third Sector Design -
+Michael McAndrew; Third Sun - Troy Mumm; Thomas Bacon; Web Access - Kurund Jalmi
