--- a/release-notes/4.7.21.md
+++ b/release-notes/4.7.21.md
@@ -481,9 +481,31 @@ Released July 5, 2017
 
 This release was developed by the following code authors:
 
-Agileware - Agileware Team; Arkadiusz Rzadkowolski; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist Association - Andrew West; chrisfromredfin; Circle Interactive - Dave Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CompuCorp - Camilo Rodriguez, Michael Devery; Coop SymbioTIC - Mathieu Lutfy; devarun; Effy Elden; elisseck; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; JMA Consulting - Monish Deb, Pradeep Nayak; Joinery - Allen Shaw; Jon Goldberg; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; Romain Thouvenin; Sean Madsen; Systopia - Björn Endres; Web Access - Kurund Jalmi; Wikimedia Foundation - Eileen McNaughton
+Agileware - Agileware Team; Arkadiusz Rzadkowolski; Arun Singh; Australian
+Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist
+Association - Andrew West; Circle Interactive - Dave Jenkins; CiviCRM - Coleman
+Watts, Tim Otten; CiviDesk - Yashodha Chaku; CompuCorp - Camilo Rodriguez,
+Michael Devery; Coop SymbioTIC - Mathieu Lutfy; Effy Elden; Eli Lisseck;
+Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion -
+Chris Burgess, Eileen McNaughton, Jitendra Purohit; Ginkgo Street Labs - Frank
+Gómez; JMA Consulting - Monish Deb, Pradeep Nayak; Joinery - Allen Shaw; Jon
+Goldberg; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian
+Shaughnessy; Oxfam Germany - Thomas Schüttler; Progressive Technology Project -
+Jamie McClelland; Redfin Solutions - Chris Wells; Romain Thouvenin; Sean Madsen;
+Systopia - Björn Endres; Web Access - Kurund Jalmi; Wikimedia Foundation -
+Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-Agileware - Agileware Team; alainb; Alcohol Justice - Bruce Wolfe; alexmarketaccess; Arkadiusz Rzadkowolski; aruns6578; Australian Greens - Seamus Lee; axon-obriend; Blackfly Solutions - Alan Dixon; Bob Silvern; British Humanist Association - Andrew West; Circle Interactive - Dave Jenkins, Martin Castle; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviHosting - Hershel Robinson; clarkac; CompuCorp - Guanhuan Chen, Michael Devery, Mirela Stanila; Coop SymbioTIC - Mathieu Lutfy; devarun; dvhirst; Effy Elden; elisseck; fabian (systopia); fabian_SYSTOPIA; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Ginkgo Street Labs - Frank Gómez; JMA Consulting - Joe Murray, Monish Deb, Pradeep Nayak; Joanne Chester; Johan Vervloet; Joinery - Allen Shaw; Jon Goldberg; Korlon - Stuart Gaston; Lighthouse Design and Consulting - Brian Shaughnessy; MC3 - Graham Mitchell; Michal Mach; Milton Zurita; Miya27; MJW Consulting - Matthew Wire; Nubay Services - David Tarrant; Oxfam Germany - Thomas Schüttler; pillarsdotnet; Progressive Technology Project - Jamie McClelland; Redfin Solutions - Chris Wells; Registered Nurses' Association of Ontario - Thomas Mannell; Richard van Oosterhout; rohan; Romain Thouvenin; Sean Madsen; Semper IT - Karin Gerritsen; sixfootjames; Skvare - Mark Hanna; Systopia - Björn Endres; tttp; wdecraene; Wikimedia Foundation - Eileen McNaughton; xavier
+Alcohol Justice - Bruce Wolfe; Alex Block; Andy Clarke; Blackfly Solutions -
+Alan Dixon; Bob Silvern; Bob Vincent; Business & Code - Alain Benbassat; Circle
+Interactive - Martin Castle; CiviDesk - Nicolas Ganivet; CiviHosting - Hershel
+Robinson; CompuCorp - Guanhuan Chen, Mirela Stanila; Donald Hirst; Fuzion -
+Peter Davis; Ginkgo Street Labs - Dan O'Brien; James van der Hoven; JMA
+Consulting - Joe Murray; Joanne Chester; Johan Vervloet; Korlon - Stuart Gaston;
+MC3 - Graham Mitchell; Michal Mach; Milton Zurita; MJW Consulting - Matthew
+Wire; Nubay Services - David Tarrant; Registered Nurses' Association of Ontario -
+Thomas Mannell; Richard van Oosterhout; Semper IT - Karin Gerritsen; Skvare -
+Mark Hanna; Systopia - Fabian Schuttenberg; Tech To The People - Xavier Dutoit;
+Web Access - Rohan Chavan; Wim De Craene
