--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -7,6 +7,16 @@ Released August 2, 2017;
 - **[Miscellany](#misc)**
 - **[Credits](#credits)**
 
+| Does this version                                               |         |
+|:--------------------------------------------------------------- |:-------:|
+| fix security vulnerabilities?                                   | no      |
+| change the database schema?                                     | no      |
+| **alter the API?**                                              | **yes** |
+| **require attention to configuration options?**                 | **yes** |
+| **fix problems installing or upgrading to a previous version?** | **yes** |
+| **introduce features?**                                         | **yes** |
+| **fix bugs?**                                                   | **yes** |
+
 ## <a name="features"></a>Features
 
 ### Core CiviCRM
@@ -143,6 +153,23 @@ Released August 2, 2017;
   the Thank-you Letter form.  They had been processed, but there was no
   indication that they were available.
 
+- **[CRM-20860](https://issues.civicrm.org/jira/browse/CRM-20860) Add in
+  password type field availability and apply to payment processor fields
+  ([10649](https://github.com/civicrm/civicrm-core/pull/10649))**
+
+  Field metadata can now specify the HTML field type of `Password` which adds a
+  `HTML_QuickForm_password` field element.  This is implemented on payment
+  processor settings fields.
+
+### CiviMember
+
+- **[CRM-20901](https://issues.civicrm.org/jira/browse/CRM-20901) Add submit
+  credit card membership link on membership form
+  ([10689](https://github.com/civicrm/civicrm-core/pull/10689))**
+
+  The backend add membership form now has a link to the backend credit card
+  membership form.
+
 ### Drupal Integration
 
 - **[CRM-20751](https://issues.civicrm.org/jira/browse/CRM-20751) Support Drupal
@@ -156,6 +183,15 @@ Released August 2, 2017;
 ## <a name="bugs"></a>Bugs resolved
 
 ### Core CiviCRM
+
+- **[CRM-20873](https://issues.civicrm.org/jira/browse/CRM-20873) CIVICRM-118 DB
+  Error: no such field / Unknown column 'civicrm_custom_group.is_public' breaks
+  CiviCRM database update process
+  ([10662](https://github.com/civicrm/civicrm-core/pull/10662))**
+
+  This fixes a bug in upgrading from 4.7.18 or earlier to 4.7.19 or later.  Code
+  used by the upgrade to load the available custom data for an entity relies
+  upon a field that is not made available until after the upgrade.
 
 - **[CRM-20849](https://issues.civicrm.org/jira/browse/CRM-20849) Multiple
   extensions using the same autoloader prefix will overwrite previous
@@ -185,17 +221,9 @@ Released August 2, 2017;
   Reports with group filters would display rows twice if multiple groups were
   selected in the filter and contacts were in more than one of those groups.
 
-- **[CRM-20953](https://issues.civicrm.org/jira/browse/CRM-20953) Importing contacts with deceased_date not setting is_deceased ([10742](https://github.com/civicrm/civicrm-core/pull/10742))**
-
-- **[CRM-20891](https://issues.civicrm.org/jira/browse/CRM-20891) Pay later option incorrectly shows as completed when combining membership and donation ([10683](https://github.com/civicrm/civicrm-core/pull/10683))**
-
-- **[CRM-20902](https://issues.civicrm.org/jira/browse/CRM-20902) DB Syntax error on Mailing Opened Report ([10690](https://github.com/civicrm/civicrm-core/pull/10690))**
-
-- **[CRM-20901](https://issues.civicrm.org/jira/browse/CRM-20901) Add submit credit card membership link on membership form ([10689](https://github.com/civicrm/civicrm-core/pull/10689))**
-
-- **[CRM-20860](https://issues.civicrm.org/jira/browse/CRM-20860) Add in password type field availability and apply to payment processor fields ([10649](https://github.com/civicrm/civicrm-core/pull/10649))**
-
-- **[CRM-20873](https://issues.civicrm.org/jira/browse/CRM-20873) CIVICRM-118 DB Error: no such field / Unknown column 'civicrm_custom_group.is_public' breaks CiviCRM database update process ([10662](https://github.com/civicrm/civicrm-core/pull/10662))**
+- **[CRM-20953](https://issues.civicrm.org/jira/browse/CRM-20953) Importing
+  contacts with deceased_date not setting is_deceased
+  ([10742](https://github.com/civicrm/civicrm-core/pull/10742))**
 
 - **[CRM-20848](https://issues.civicrm.org/jira/browse/CRM-20848) Upgrade to 4.7.19 sets price_field to inactive if default Financial Types are disabled ([10675](https://github.com/civicrm/civicrm-core/pull/10675))**
 
@@ -334,6 +362,13 @@ Released August 2, 2017;
   doesn't respect localization
   ([10536](https://github.com/civicrm/civicrm-core/pull/10536))**
 
+- **[CRM-20891](https://issues.civicrm.org/jira/browse/CRM-20891) Pay later
+  option incorrectly shows as completed when combining membership and donation
+  ([10683](https://github.com/civicrm/civicrm-core/pull/10683))**
+
+  Using a contribution page with "separate membership payment" set, a pay-later
+  contribution would incorrectly mark the membership contribution completed.
+
 - **[CRM-20773](https://issues.civicrm.org/jira/browse/CRM-20773) Contribution tab shows Receive Date twice instead of Thank You date ([10607](https://github.com/civicrm/civicrm-core/pull/10607))**
 
 - **[CRM-20387](https://issues.civicrm.org/jira/browse/CRM-20387) Sales Tax and Invoicing code overwrites existing CiviCRM invoice ID ([10298](https://github.com/civicrm/civicrm-core/pull/10298))**
@@ -407,6 +442,10 @@ Released August 2, 2017;
 
   Long values in columns would crowd other columns off the screen or into
   illegibility.
+
+- **[CRM-20902](https://issues.civicrm.org/jira/browse/CRM-20902) DB Syntax
+  error on Mailing Opened Report
+  ([10690](https://github.com/civicrm/civicrm-core/pull/10690))**
 
 - **[CRM-20713](https://issues.civicrm.org/jira/browse/CRM-20713) db error when populating mailing recipients because sms_provider_id is 'null' ([10487](https://github.com/civicrm/civicrm-core/pull/10487))**
 
