--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -2,10 +2,14 @@
 
 Released August 2, 2017
 
+- **[Synopsis](#synopsis)**
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
 - **[Miscellany](#misc)**
 - **[Credits](#credits)**
+- **[Feedback](#feedback)**
+
+## <a name="synopsis"></a>Synopsis
 
 | Does this version                                               |         |
 |:--------------------------------------------------------------- |:-------:|
@@ -667,3 +671,9 @@ Mitchell; Nathan Brettell; Oxfam Germany - Thomas Schüttler; Peter Bull; Phil
 McKerracher; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Stephen
 Palmstrom; Tadpole Collective - Kevin Cristiano; Upleaf - Osvaldo Gomez;
 Wikimedia Foundation - Elliott Eggleston
+
+## <a name="feedback"></a>Feedback
+
+These release notes have been made possible by the diligent curation of Andrew Hunt.
+If you'd like to provide feedback on them, please login to https://chat.civicrm.org/civicrm
+and contact `@agh1`.
